--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "photoswipe": "^4.1.3",
         "register-service-worker": "^1.0.0",
         "spark-md5": "^3.0.0",
+        "v-previews": "0.0.2",
         "vee-validate": "^2.1.4",
         "vue": "^2.6.7",
         "vue-class-component": "^6.0.0",
