--- a/public/tripnote/manifest.json
+++ b/public/tripnote/manifest.json
@@ -19,7 +19,7 @@
             "type": "image/png"
         }
     ],
-    "start_url": "/pwa/tripnote",
+    "start_url": "/",
     "display": "standalone",
     "background_color": "#000000"
 }
