--- a/package.json
+++ b/package.json
@@ -11,49 +11,49 @@
         "test:e2e": "vue-cli-service test:e2e"
     },
     "dependencies": {
-        "axios": "^0.18.0",
-        "date-fns": "^1.29.0",
-        "echarts": "^4.1.0",
-        "element-ui": "^2.4.5",
-        "lodash": "^4.17.11",
-        "marked": "^0.6.0",
-        "monaco-editor": "^0.15.6",
-        "photoswipe": "^4.1.3",
-        "register-service-worker": "^1.0.0",
-        "spark-md5": "^3.0.0",
+        "axios": "0.18.0",
+        "date-fns": "1.29.0",
+        "echarts": "4.1.0",
+        "element-ui": "2.4.5",
+        "lodash": "4.17.11",
+        "marked": "0.6.0",
+        "monaco-editor": "0.15.6",
+        "photoswipe": "4.1.3",
+        "register-service-worker": "1.0.0",
+        "spark-md5": "3.0.0",
         "v-previews": "0.0.2",
         "vee-validate": "^2.1.4",
-        "vue": "^2.6.7",
-        "vue-class-component": "^6.0.0",
-        "vue-property-decorator": "^7.0.0",
-        "vue-router": "^3.0.1",
-        "vue-slicksort": "^1.1.3",
-        "vue-virtual-scroller": "^1.0.0-rc.2",
-        "vuex": "^3.0.1",
-        "vuex-class": "^0.3.1"
+        "vue": "2.6.7",
+        "vue-class-component": "6.0.0",
+        "vue-property-decorator": "7.0.0",
+        "vue-router": "3.0.1",
+        "vue-slicksort": "1.1.3",
+        "vue-virtual-scroller": "1.0.0-rc.2",
+        "vuex": "3.0.1",
+        "vuex-class": "0.3.1"
     },
     "devDependencies": {
-        "@types/echarts": "^4.1.4",
-        "@types/lodash": "^4.14.122",
-        "@types/photoswipe": "^4.0.28",
-        "@types/spark-md5": "^3.0.1",
-        "@vue/cli-plugin-babel": "^3.1.1",
-        "@vue/cli-plugin-e2e-cypress": "^3.1.2",
-        "@vue/cli-plugin-pwa": "^3.1.2",
-        "@vue/cli-plugin-typescript": "^3.1.1",
-        "@vue/cli-service": "^3.1.4",
-        "compression-webpack-plugin": "^2.0.0",
-        "less": "^3.0.4",
-        "less-loader": "^4.1.0",
-        "mockjs": "^1.0.1-beta3",
-        "monaco-editor-webpack-plugin": "^1.7.0",
-        "node-sass": "^4.9.0",
-        "postcss-plugin-px2rem": "^0.8.1",
-        "sass-loader": "^7.0.1",
-        "ts-import-plugin": "^1.5.5",
+        "@types/echarts": "4.1.4",
+        "@types/lodash": "4.14.122",
+        "@types/photoswipe": "4.0.28",
+        "@types/spark-md5": "3.0.1",
+        "@vue/cli-plugin-babel": "3.1.1",
+        "@vue/cli-plugin-e2e-cypress": "3.1.2",
+        "@vue/cli-plugin-pwa": "3.1.2",
+        "@vue/cli-plugin-typescript": "3.1.1",
+        "@vue/cli-service": "3.1.4",
+        "compression-webpack-plugin": "2.0.0",
+        "less": "3.0.4",
+        "less-loader": "4.1.0",
+        "mockjs": "1.0.1-beta3",
+        "monaco-editor-webpack-plugin": "1.7.0",
+        "node-sass": "5.0.0",
+        "postcss-plugin-px2rem": "0.8.1",
+        "sass-loader": "7.0.1",
+        "ts-import-plugin": "1.5.5",
         "typescript": "^3.0.0",
-        "vue-template-compiler": "^2.6.7",
-        "webpack-bundle-analyzer": "^3.0.3"
+        "vue-template-compiler": "2.6.7",
+        "webpack-bundle-analyzer": "3.0.3"
     },
     "keywords": [
         "tripnote"
