chore: 构建更换为 vite

--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,4 @@
-NODE_ENV = 'development'
-
-VUE_APP_FILE_PUBLIC = ''
-VUE_APP_FILE_SELF = 'tripnote'
-VUE_APP_URL_BASE = '/'
-VUE_APP_URL_SELF = '/tripnote/'
+VITE_FILE_PUBLIC = ''
+VITE_FILE_SELF = 'tripnote'
+VITE_URL_BASE = '/'
+VITE_URL_SELF = '/tripnote/'
