--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VUE_APP_FILE_PUBLIC = 'public'
-VUE_APP_FILE_SELF = 'tripnote'
-VUE_APP_URL_BASE = '/public/'
-VUE_APP_URL_SELF = '/public/tripnote/'
+VITE_FILE_PUBLIC = 'public'
+VITE_FILE_SELF = 'tripnote'
+VITE_URL_BASE = '/public/'
+VITE_URL_SELF = '/public/tripnote/'
