--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
     "name": "tripnote",
-    "version": "0.1.0",
-    "private": true,
+    "version": "1.0.0",
     "author": "aweikalee",
+    "type": "module",
     "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build --mode production",
-        "lint": "vue-cli-service lint",
-        "inspect": "vue-cli-service inspect --mode production > webpack.config.copy.js",
-        "test:e2e": "vue-cli-service test:e2e"
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
     },
     "dependencies": {
         "axios": "0.18.0",
@@ -18,13 +16,13 @@
         "lodash": "4.17.11",
         "marked": "0.6.0",
         "monaco-editor": "0.15.6",
+        "normalize.css": "8.0.1",
         "photoswipe": "4.1.3",
-        "register-service-worker": "1.0.0",
         "spark-md5": "3.0.0",
         "v-previews": "0.0.2",
-        "vee-validate": "^2.1.4",
-        "vue": "2.6.7",
-        "vue-class-component": "6.0.0",
+        "vee-validate": "2.1.4",
+        "vue": "2.7.14",
+        "vue-class-component": "6.3.2",
         "vue-property-decorator": "7.0.0",
         "vue-router": "3.0.1",
         "vue-slicksort": "1.1.3",
@@ -37,30 +35,15 @@
         "@types/lodash": "4.14.122",
         "@types/photoswipe": "4.0.28",
         "@types/spark-md5": "3.0.1",
-        "@vue/cli-plugin-babel": "3.1.1",
-        "@vue/cli-plugin-e2e-cypress": "3.1.2",
-        "@vue/cli-plugin-pwa": "3.1.2",
-        "@vue/cli-plugin-typescript": "3.1.1",
-        "@vue/cli-service": "3.1.4",
-        "compression-webpack-plugin": "2.0.0",
-        "less": "3.0.4",
-        "less-loader": "4.1.0",
-        "mockjs": "1.0.1-beta3",
-        "monaco-editor-webpack-plugin": "1.7.0",
-        "node-sass": "5.0.0",
+        "@vitejs/plugin-vue2": "2.2.0",
+        "autoprefixer": "10.4.14",
+        "less": "4.1.3",
         "postcss-plugin-px2rem": "0.8.1",
-        "sass-loader": "7.0.1",
-        "ts-import-plugin": "1.5.5",
-        "typescript": "^3.0.0",
-        "vue-template-compiler": "2.6.7",
-        "webpack-bundle-analyzer": "3.0.3"
-    },
-    "keywords": [
-        "tripnote"
-    ],
-    "browserslist": [
-        "> 1%",
-        "last 2 versions",
-        "not ie <= 8"
-    ]
+        "rollup-plugin-visualizer": "5.9.2",
+        "sass": "1.26.2",
+        "typescript": "5.1.6",
+        "vite": "4.4.5",
+        "vite-plugin-pwa": "0.16.4",
+        "vue-tsc": "1.8.5"
+    }
 }
